--- a/app/static/css/init.css
+++ b/app/static/css/init.css
@@ -1,61 +1,21 @@
-   body,
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   h6,
-   hr,
-   p,
-   blockquote,
-   dl,
-   dt,
-   dd,
-   ul,
-   ol,
-   li,
-   pre,
-   form,
-   fieldset,
-   legend,
-   button,
-   input,
-   textarea,
-   th,
-   td {
+   body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td {
        margin: 0;
        padding: 0;
    }
 
-   body,
-   button,
-   input,
-   select,
-   textarea {
-       font: 12px/1.5tahoma, arial, \5b8b\4f53;
+   body, button, input, select, textarea {
+       font: caption;
    }
 
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   h6 {
+   h1, h2, h3, h4, h5, h6 {
        font-size: 100%;
    }
 
-   address,
-   cite,
-   dfn,
-   em,
-   var {
+   address, cite, dfn, em, var {
        font-style: normal;
    }
 
-   code,
-   kbd,
-   pre,
-   samp {
+   code, kbd, pre, samp {
        font-family: couriernew, courier, monospace;
    }
 
@@ -63,8 +23,7 @@
        font-size: 12px;
    }
 
-   ul,
-   ol {
+   ul, ol {
        list-style: none;
    }
 
@@ -88,15 +47,11 @@
        color: #000;
    }
 
-   fieldset,
-   img {
+   fieldset, img {
        border: 0;
    }
 
-   button,
-   input,
-   select,
-   textarea {
+   button, input, select, textarea {
        font-size: 100%;
    }
 
@@ -105,8 +60,7 @@
        border-spacing: 0;
    }
 
-   html,
-   body {
+   html, body {
        width: 100%;
        height: 100%;
        margin: 0;
