--- a/src/view/dialog.html
+++ b/src/view/dialog.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./../static/js/vue.js"></script>
     <script src="./../static/js/iview.js"></script>
-    <!-- <link rel="stylesheet" href="./../static/css/init.css"> -->
     <link rel="stylesheet" href="./../static/css/iview.css">
     <style>
         .dialog {
@@ -16,6 +15,7 @@
             height: 250px;
             padding: 16px;
             color: #303133;
+            user-select: none;
         }
 
         .v-title {
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="v-footer">
-                <i-Button type="primary" size="large" style="width: 92px;height: 40px;" @click="close">确定</i-Button>
+                <i-Button type="info" size="large" style="width: 92px;height: 40px;" @click="close">关闭</i-Button>
             </div>
         </div>
 
@@ -70,8 +70,10 @@
 
 <script>
     //获取
-    const remote = require('electron').remote
-    const ipcRenderer = remote.ipcRenderer;
+    const {
+        remote,
+        ipcRenderer
+    } = require('electron')
 
     let app = new Vue({
         el: '#app',
