--- a/src/view/alert.html
+++ b/src/view/alert.html
@@ -246,20 +246,20 @@
                     </i-Circle>
                 </div>
                 <div class="foot">
-                    <i-Button type="success" @click="goToReceiveKZ" size="large" :loading="loading" class="btn-large" :disabled="isOverTime">{{isOverTime?'已超时':'领取'}}</i-Button>
+                    <i-Button type="success" @click="goToReceiveKZ" size="large" :loading="loading" class="btn-large" :disabled="isOverTime"
+                        v-text="buttonText"></i-Button>
                 </div>
             </div>
         </div>
     </div>
 </body>
 <script>
-    //获取当前窗口
-    const remote = require('electron').remote
-    //url配置 
-    const url = require("../main/url-config");
     const {
+        remote,
         ipcRenderer
     } = require('electron')
+    //url配置 
+    const url = require("../main/url-config");
     const currentWindow = remote.getCurrentWindow()
     //设置axios默认值
     setAxios();
@@ -281,6 +281,7 @@
         }
         return args;
     }
+
     var app = new Vue({
         el: "#app",
         data: {
@@ -297,12 +298,28 @@
             this.getKZInfo();
             this.palyBgm();
         },
-
+        computed: {
+            buttonText() {
+                let text;
+                if (this.isOverTime) {
+                    text = '已超时';
+                } else {
+                    if (this.loading) {
+                        text = '领取中...'
+                    } else {
+                        text = '领取'
+                    }
+                }
+                return text;
+            }
+        },
         methods: {
             //关闭窗口
             closeWindow: function () {
                 //关闭窗口时，如果未超时，则向服务器发送主动关闭窗口的请求
                 if (this.isOverTime) {
+                    //发送一个消息，说明已经关闭了窗口
+                    ipcRenderer.send('request-close-receive-window', false)
                     currentWindow.close();
                     return;
                 }
@@ -313,7 +330,7 @@
                         }
                     }).then((res) => {
                         //发送一个消息，说明已经关闭了窗口
-                        ipcRenderer.send('request-close-receive-window', 'ping')
+                        ipcRenderer.send('request-close-receive-window', true)
                         currentWindow.close();
                     })
                     .catch(function (error) {
