--- a/src/view/alert.html
+++ b/src/view/alert.html
@@ -28,7 +28,7 @@
         }
 
         #alert .header {
-            height: 60px;
+            height: 46px;
             background-color: #1B46AB;
             display: flex;
         }
@@ -37,7 +37,7 @@
             position: absolute;
             z-index: 1;
             width: 100%;
-            height: 60px;
+            height: 46px;
             background-image: -webkit-linear-gradient(left, #5F8CEC, #1B46AB 25%, #5F8CEC 50%, #1B46AB 75%, #5F8CEC);
             -webkit-text-fill-color: transparent;
             -webkit-background-clip: content-box;
@@ -48,7 +48,7 @@
         #alert .header .app-control {
             position: absolute;
             z-index: 99999999;
-            height: 60px;
+            height: 46px;
             right: 0;
             overflow: hidden;
             -webkit-app-region: none;
@@ -62,7 +62,7 @@
 
         #alert .header .app-control .content a {
             text-decoration: none;
-            line-height: 60px;
+            line-height: 46px;
             font-size: 16px;
             color: #e6e6e6;
             display: block;
@@ -96,7 +96,7 @@
         }
 
         #alert .header .app-title h2 {
-            line-height: 60px;
+            line-height: 46px;
             color: #ffffff;
             font-weight: 500;
             font-size: 1.4em;
@@ -125,7 +125,7 @@
         }
 
         #alert .content .head h2 {
-            font-size: 17px;
+            font-size: 15px;
             font-weight: bold;
             color: #333;
         }
@@ -179,7 +179,6 @@
             text-align: right;
             -webkit-app-region: none;
             position: absolute;
-            bottom: 20px;
             left: 0;
             right: 0;
         }
@@ -193,8 +192,8 @@
         }
 
         .btn-large {
-            width: 110px;
-            height: 56px;
+            width: 80px;
+            height: 42px;
             font-size: large;
         }
 
@@ -233,16 +232,16 @@
             </div>
             <div class="content">
                 <div class="head">
-                    <h2 class="title">
+                    <h2 class="title" style="font-weight: normal">
                         您有
-                        <span>{{message.kznum}}</span> 个新客资，请及时领取！
+                        <span style="font-weight: bold">{{message.kznum}}</span> 个新客资，请及时领取！
                     </h2>
                 </div>
                 <div class="detail">
-                    <i-Circle :percent="percent" style="width: 150px;height: 150px;">
-                        <span style="display: block;font-size: medium;">倒计时</span>
-                        <span class="demo-Circle-inner" style="font-size:4em;color: #f90;">{{time}}</span>
-                        <span style="display: block;font-size: medium;">秒</span>
+                    <i-Circle :percent="percent" style="width: 120px;height: 120px;">
+                        <span style="display: block;font-size: 13px">倒计时</span>
+                        <span class="demo-Circle-inner" style="font-size:2.8em;color: #f90;">{{time}}</span>
+                        <span style="display: block;font-size: 13px">秒</span>
                     </i-Circle>
                 </div>
                 <div class="foot">
@@ -307,7 +306,7 @@
                     if (this.loading) {
                         text = '领取中...'
                     } else {
-                        text = '领取'
+                        text = '领 取'
                     }
                 }
                 return text;
